--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "vue": "^2.6.10",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
