--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "fashionclock": "^1.2.4",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "vue": "^2.6.10",
@@ -24,6 +25,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "fashionclock": "^1.2.4",
     "vue-template-compiler": "^2.5.21"
   }
 }
